# askgpt

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _table.py  askeda.py  askgpt.py  client.py  dev.ipynb  dev_plan.md  docker-compose.yml  entity.py  evenstore.db  makefile  modify_openapi.py  pixi.toml  pyproject.toml  test.py  todo.md
actors/: makefile  pyproject.toml
actors/src/: client.py  deployment.py  greeter_client.py  greeter_server.py  llama.py  llama_pb2_grpc.py  start_server.py
actors/src/proto/: greeter_pb2.py  greeter_pb2_grpc.py  user_defined_protos_pb2.py  user_defined_protos_pb2.pyi  user_defined_protos_pb2_grpc.py
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  api_test.py  client.py  deprecated.pixi.toml  dev.db  pixi.toml  pyproject.toml
backend/askgpt/: server.py
backend/askgpt/adapters/: __init__.py  cache.py  database.py  factory.py  gptclient.py  queue.py  request.py  tokenbucket.py  uow.py
backend/askgpt/api/: __init__.py  app.py  bootstrap.py  dependencies.py  error_handlers.py  errors.py  middleware.py  model.py  root_router.py  router.py  throttler.py  xheaders.py
backend/askgpt/app/: __init__.py  actor.py  app.py  auth_factory.py  event_service.py  factory.py  gpt_factory.py  interface.py
backend/askgpt/app/api/: __init__.py  dependencies.py  error_handlers.py  errors.py  middleware.py  model.py  response.py  throttler.py
backend/askgpt/app/api/routers/: __init__.py  auth.py  gpt.py  llm.py  user.py
backend/askgpt/app/auth/: __init__.py  _errors.py  _handlers.py  _model.py  _repository.py  api.py  errors.py  model.py  repository.py  route.py  service.py
backend/askgpt/app/gpt/: _api_pool.py  _errors.py  _gptclient.py  _model.py  _params.py  _repository.py  api.py  api_pool.py  errors.py  gptclient.py  gptsystem.py  model.py  params.py  repository.py  request.py  route.py  service.py
backend/askgpt/app/gpt/anthropic/: _params.py
backend/askgpt/app/gpt/openai/: _params.py
backend/askgpt/app/user/: _model.py  _repository.py  api.py  errors.py  repository.py  route.py  service.py
backend/askgpt/domain/: _log.py  base.py  config.py  errors.py  interface.py  types.py
backend/askgpt/domain/model/: base.py  interface.py  user.py
backend/askgpt/domain/service/: interface.py
backend/askgpt/feat/: actor.py  app.py  factory.py
backend/askgpt/feat/auth/: repository.py  route.py  service.py
backend/askgpt/feat/gpt/: errors.py  gptsystem.py  model.py  params.py  repository.py  request.py  route.py  service.py
backend/askgpt/feat/user/: repository.py  route.py  service.py
backend/askgpt/helpers/: __init__.py  _log.py  data.py  dependency_tree.py  enum.py  error_handlers.py  error_registry.py  error_template.html  extratypes.py  file.py  file_loader.py  fmt.py  functions.py  sdb.py  security.py  service_locator.py  sql.py  string.py  time.py
backend/askgpt/helpers/event/: eventbus.py  eventhandlers.py  msgbus.py
backend/askgpt/helpers/ididi/: __init__.py  errors.py  graph.py  node.py  types.py  visual.py
backend/askgpt/helpers/ididi/utils/: param_utils.py  pretty_utils.py  typing_utils.py
backend/askgpt/infra/: _log.py  event_listener.py  eventrecord.py  eventstore.py  factory.py  gptclient.py  locator.py  schema.py  security.py  uow.py
backend/scripts/: modify_openapi.py
backend/src/: cli.py  client.py  server.py  template.toml
backend/src/adapters/: __init__.py  cache.py  database.py  factory.py  gptclient.py  queue.py  tokenbucket.py
backend/src/app/: actor.py  app.py  bootstrap.py  eventrecord.py  factory.py  interface.py  service_registry.py
backend/src/app/api/: __init__.py  dependencies.py  error_handlers.py  errors.py  middleware.py  model.py  response.py  throttler.py  validation.py
backend/src/app/api/endpoints/: __init__.py  auth.py  gpt.py  llm.py
backend/src/app/api/routers/: __init__.py  auth.py  gpt.py  user.py
backend/src/app/auth/: errors.py  model.py  repository.py  service.py
backend/src/app/gpt/: errors.py  gptclient.py  gptsystem.py  model.py  params.py  repository.py  request.py  service.py
backend/src/domain/: _log.py  base.py  config.py  enums.py  errors.py  fmtutils.py  interface.py
backend/src/domain/model/: base.py  interface.py  test_default.py  token.py  user.py
backend/src/helpers/: error_handlers.py  extratypes.py  file.py  fileutil.py  functions.py  funcutils.py  sa_utils.py  service_locator.py  sql.py  string.py  time.py  timeutils.py
backend/src/helpers/error_handlers/: __init__.py  handler_registry.py
backend/src/infra/: cache.py  class_based_router.py  encrypt.py  eventrecord.py  eventstore.py  factory.py  sa_utils.py  schema.py  security.py  service_locator.py  service_registry.py  timer.py  tokenbucket.py
backend/src/script/: tokenbucket.lua
backend/src/toolkit/: __init__.py  extratypes.py  fileutil.py  fmtutils.py  funcutils.py  nameutils.py  sa_utils.py  timeutils.py
backend/src/tools/: fileutil.py  nameutils.py
backend/tests/: _const.py  conftest.py
backend/tests/e2e/: conftest.py  test_cli.py  test_client.py
backend/tests/integration/: __init__.py  conftest.py  test_api.py  test_auth_service.py  test_eventstore.py  test_file_utils.py  test_gpt.py  test_rebuild_actor.py  test_redis.py  test_service_registry.py  test_table.py  test_user_repo.py
backend/tests/integration/test_auth/: test_auth_service.py  test_user_repo.py
backend/tests/integration/test_gpt/: conftest.py  test_gpt_service.py  test_gpt_system.py  test_rebuild_actor.py  test_session_repo.py
backend/tests/unit/: conftest.py  test_auth_user.py  test_encrypt.py  test_enums.py  test_event.py  test_jwt.py  test_logger.py  test_messages.py  test_model.py  test_nametools.py  test_read_settings.py  test_session.py  test_timer.py  test_user.py
backend/tests/unit/infra/: test_clioptions.py  test_file_loader.py
backend/tests/unit/test_auth/: test_auth_user.py  test_encrypt.py  test_jwt.py
backend/tests/unit/test_gpt/: test_dto.py  test_event.py  test_messages.py  test_session.py  test_user.py
backend/~/: .zshrc
(+221 files in other folders)
