[tool.poetry]
name = "askgpt"
version = "0.1.0"
description = ""
authors = ["raceychan <raceychan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.9"
rich = "^13.5.2"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.21"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.327"

[tool.pyright]
include = ["src/*.py"]

#typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
