[tool.poetry]
name = "askgpt"
version = "0.1.0"
description = ""
authors = ["raceychan <raceychan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "1.1"
rich = "^13.5.2"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.21"
pydantic = "^2.4.2"
tomli = "^2.0.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.327"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "integration_test: marks tests as slow integration tests (deselect with '-m \"not integration_test\"')",
]

[tool.pyright]
include = ["src/*.py"]
typeCheckingMode = "strict"

[tool.mypy]
python_version = "3.12"
mypy_path = "src/*.py"
strict = true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = "src/*"
implicit_reexport = true
# enable-incomplete-feature = "Unpack"

[[tool.mypy.overrides]]
module = "src.domain.fileutil"
warn_unused_ignores = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
