[tool.poetry]
name = "askgpt"
version = "0.1.0"
description = ""
authors = ["raceychan <raceychan@gmail.com>"]
license = "GPL"
readme = "README.md"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --maxfail=1 --pdbcls=IPython.terminal.debugger:Pdb"
markers = [
    "integration_test: marks tests as slow integration tests (deselect with '-m \"not integration_test\"')",
]

filterwarnings = ["ignore::DeprecationWarning"]


[tool.pyright]
include = ["src/*.py"]
typeCheckingMode = "strict"
exclude = ["tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src/*.py"
strict = true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = "src/*"
implicit_reexport = true
# enable-incomplete-feature = "Unpack"

[[tool.mypy.overrides]]
module = "src.domain.fileutil"
warn_unused_ignores = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
